added support for external texture buffer added support for cubemaps

--- a/.gitignore
+++ b/.gitignore
@@ -600,3 +600,138 @@ vgmtoolbox_bin_r1040/plugins/XmaConverter/xbox360_dead_rising.xml
 vgmtoolbox_bin_r1040/plugins/XmaConverter/xbox360_fallout_new_vegas.xml
 vgmtoolbox_bin_r1040/plugins/XmaConverter/xbox360_infinite_undiscovery.xml
 vgmtoolbox_bin_r1040/rips/dir.txt
+external/shader_decompiler/41_1_108.asm
+external/shader_decompiler/41_1_108.bin
+external/shader_decompiler/d3dcompiler_46.dll
+external/shader_decompiler/decompiler.exe
+external/shader_decompiler/dxgi.dll
+external/texconv/texconv.exe
+external/vgmstream/avcodec-vgmstream-59.dll
+external/vgmstream/avformat-vgmstream-59.dll
+external/vgmstream/avutil-vgmstream-57.dll
+external/vgmstream/COPYING
+external/vgmstream/libatrac9.dll
+external/vgmstream/libcelt-0061.dll
+external/vgmstream/libcelt-0110.dll
+external/vgmstream/libg719_decode.dll
+external/vgmstream/libmpg123-0.dll
+external/vgmstream/libspeex-1.dll
+external/vgmstream/libvorbis.dll
+external/vgmstream/README.md
+external/vgmstream/swresample-vgmstream-4.dll
+external/vgmstream/USAGE.md
+external/vgmstream/vgmstream-cli.exe
+external/vgmtoolbox_bin_r1040/credits.txt
+external/vgmtoolbox_bin_r1040/history.txt
+external/vgmtoolbox_bin_r1040/LICENSE.txt
+external/vgmtoolbox_bin_r1040/readme.txt
+external/vgmtoolbox_bin_r1040/VGMToolbox.exe
+external/vgmtoolbox_bin_r1040/VGMToolbox.exe.config
+external/vgmtoolbox_bin_r1040/Resources/audioCd.ico
+external/vgmtoolbox_bin_r1040/Resources/emptyCd.ico
+external/vgmtoolbox_bin_r1040/Resources/genericFile.ico
+external/vgmtoolbox_bin_r1040/Resources/normalFolder.ico
+external/vgmtoolbox_bin_r1040/Resources/openFolder.ico
+external/vgmtoolbox_bin_r1040/db/collection.s3db
+external/vgmtoolbox_bin_r1040/examine/dir.txt
+external/vgmtoolbox_bin_r1040/external/bin2psf.exe
+external/vgmtoolbox_bin_r1040/external/psfpoint.exe
+external/vgmtoolbox_bin_r1040/external/2sf/sseq2mid.exe
+external/vgmtoolbox_bin_r1040/external/psf/EZPSF_V104.EXE
+external/vgmtoolbox_bin_r1040/external/psf/listsig.exe
+external/vgmtoolbox_bin_r1040/external/psf/MG_DRIVER_V25.SEQ.INFINITE.EXE
+external/vgmtoolbox_bin_r1040/external/psf/MG_DRIVER_V300.SEQ.INFINITE.EXE
+external/vgmtoolbox_bin_r1040/external/psf/MG_DRIVER_V422.SEQ.INFINITE.EXE
+external/vgmtoolbox_bin_r1040/external/psf/minipsf.exe
+external/vgmtoolbox_bin_r1040/external/psf/mk.bat
+external/vgmtoolbox_bin_r1040/external/psf/psfdrv.c
+external/vgmtoolbox_bin_r1040/external/psf/sig.dat
+external/vgmtoolbox_bin_r1040/external/psf/sigfind.exe
+external/vgmtoolbox_bin_r1040/external/psf/sigfind2.exe
+external/vgmtoolbox_bin_r1040/external/psf2/mkpsf2.exe
+external/vgmtoolbox_bin_r1040/external/psf2/unpkpsf2.exe
+external/vgmtoolbox_bin_r1040/external/psf2/modules/cdvdnul.irx
+external/vgmtoolbox_bin_r1040/external/psf2/modules/fakesif.irx
+external/vgmtoolbox_bin_r1040/external/psf2/modules/myhost.irx
+external/vgmtoolbox_bin_r1040/external/psf2/modules/psf2.irx
+external/vgmtoolbox_bin_r1040/external/psf2/modules/sq.irx
+external/vgmtoolbox_bin_r1040/external/sox/dir.txt
+external/vgmtoolbox_bin_r1040/external/ssf/seqext.py
+external/vgmtoolbox_bin_r1040/external/ssf/ssftime.py
+external/vgmtoolbox_bin_r1040/external/ssf/tonext.py
+external/vgmtoolbox_bin_r1040/external/ssf/ssfinfo/ssfinfo.py
+external/vgmtoolbox_bin_r1040/external/ssf/ssfmake/GEN_DSP4040.MAP
+external/vgmtoolbox_bin_r1040/external/ssf/ssfmake/GEN_DSP8040.MAP
+external/vgmtoolbox_bin_r1040/external/ssf/ssfmake/GEN_DSP10040.MAP
+external/vgmtoolbox_bin_r1040/external/ssf/ssfmake/GEN_DSP20040.MAP
+external/vgmtoolbox_bin_r1040/external/ssf/ssfmake/GEN_SEQ07000.MAP
+external/vgmtoolbox_bin_r1040/external/ssf/ssfmake/GEN_SEQ08000.MAP
+external/vgmtoolbox_bin_r1040/external/ssf/ssfmake/GEN_SEQ10000.MAP
+external/vgmtoolbox_bin_r1040/external/ssf/ssfmake/GEN_SEQ20000.MAP
+external/vgmtoolbox_bin_r1040/external/ssf/ssfmake/ssfmake.py
+external/vgmtoolbox_bin_r1040/external/wii/dir.txt
+external/vgmtoolbox_bin_r1040/external/wiiu/dir.txt
+external/vgmtoolbox_bin_r1040/external/xma/dir.txt
+external/vgmtoolbox_bin_r1040/hoot/dir.txt
+external/vgmtoolbox_bin_r1040/lib/7z.dll
+external/vgmtoolbox_bin_r1040/lib/bass.dll
+external/vgmtoolbox_bin_r1040/lib/Bass.Net.dll
+external/vgmtoolbox_bin_r1040/lib/bassmidi.dll
+external/vgmtoolbox_bin_r1040/lib/dbutil.dll
+external/vgmtoolbox_bin_r1040/lib/format.dll
+external/vgmtoolbox_bin_r1040/lib/ICSharpCode.SharpZipLib.dll
+external/vgmtoolbox_bin_r1040/lib/ICSharpCode.SharpZipLib.dll.COPYING.txt
+external/vgmtoolbox_bin_r1040/lib/Ionic.Zip.dll
+external/vgmtoolbox_bin_r1040/lib/Ionic.Zip.License.txt
+external/vgmtoolbox_bin_r1040/lib/jsutil.dll
+external/vgmtoolbox_bin_r1040/lib/SevenZipSharp.dll
+external/vgmtoolbox_bin_r1040/lib/System.Data.SQLite.dll
+external/vgmtoolbox_bin_r1040/lib/System.Data.SQLite.xml
+external/vgmtoolbox_bin_r1040/lib/vgmtplugin.dll
+external/vgmtoolbox_bin_r1040/lib/vgmtutil.dll
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/3ds_ktss.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/3dscseq.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/3dscstm.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/3dscwav.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/arcbmiidx2dx.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/arcbmiidxsd9.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/dcdtpk.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/dir.txt
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/mswma.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ndssdat.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ndssmd.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ndssseq.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ndsstrm.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ndsswav.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ndsswd.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2adsss2type1.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2adsss2type2.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2adsss2type3.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2bmdx.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2hd.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2ild.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2kces.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2sq.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2ster.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2svag.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2vagptype1.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2vagptype2.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2vagptype3.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/ps2vsf.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/psxseq.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/psxvab.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/riff.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/sddrvs.tsk.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/wiirbnk.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/wiirseq.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/wiirwar.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/wiirwav.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/wiirwsd.xml
+external/vgmtoolbox_bin_r1040/plugins/AdvancedCutter/x360tri-ace-iu-so4-wavestrm.xml
+external/vgmtoolbox_bin_r1040/plugins/VFSExtractor/dir.txt
+external/vgmtoolbox_bin_r1040/plugins/XmaConverter/dir.txt
+external/vgmtoolbox_bin_r1040/plugins/XmaConverter/xbox360_blur.xml
+external/vgmtoolbox_bin_r1040/plugins/XmaConverter/xbox360_dead_rising.xml
+external/vgmtoolbox_bin_r1040/plugins/XmaConverter/xbox360_fallout_new_vegas.xml
+external/vgmtoolbox_bin_r1040/plugins/XmaConverter/xbox360_infinite_undiscovery.xml
+external/vgmtoolbox_bin_r1040/rips/dir.txt
