--- a/.gitignore
+++ b/.gitignore
@@ -735,3 +735,4 @@ external/vgmtoolbox_bin_r1040/plugins/XmaConverter/xbox360_dead_rising.xml
 external/vgmtoolbox_bin_r1040/plugins/XmaConverter/xbox360_fallout_new_vegas.xml
 external/vgmtoolbox_bin_r1040/plugins/XmaConverter/xbox360_infinite_undiscovery.xml
 external/vgmtoolbox_bin_r1040/rips/dir.txt
+Report20231028-0033.diagsession
