--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="directxtex_uwp" version="2023.6.14.1" targetFramework="native" />
+  <package id="jsoncpp" version="0.6.0.1" targetFramework="native" />
+  <package id="jsoncpp.redist" version="0.6.0.1" targetFramework="native" />
   <package id="TeximpNet" version="1.4.3" targetFramework="native" />
 </packages>
